2005-12-27  Jordi Mallach  <jordi@sindominio.net>

	* src/Makefile.am (gnome_mud_SOURCES): Embarrasing typo.

2005-12-26  Les Harris  <lescom@comcast.net>
	
	* Add Mud List support.
	* Add Mud Connection support with data derived from Mud List.
	* ui/main.glade: Split into multiple glade files.

2005-12-20  Les Harris  <lescom@comcast.net>

	* Removed duplicate code that caused a crash on connect.

2005-09-14  Jordi Mallach  <jordi@sindominio.net>

	* Merge gnome-mud-glade-branch to HEAD.
	* Forwardport missing bits from gnome-mud 0.10.x.
	* Old branch is now gnome-mud-0-10.

2005-09-01  Pawan Chitrakar  <pchitrakar@gmail.com>

	* configure.ac: Added ne in ALL_LINGUAS

2005-08-02  Maxim Dziumanenko <mvd@mylinux.ua>

	* configure.in: Added "uk" to ALL_LINGUAS.

2005-05-16  Jordi Mallach  <jordi@sindominio.net>

	* src/directions.c (directions_window_ok_cb): Fix typo which
	would prevent directional keys from being saved correctly
	(fixes #304050).

2005-05-10  Jordi Mallach  <jordi@sindominio.net>

	* Makefile.am (EXTRA_DIST): Get rid of
	intltool-modules/XML/Parser/Style/OrigTree.pm.
	* src/Makefile.am (EXTRA_DIST): Add directions.h.

2005-05-10  Jordi Mallach  <jordi@sindominio.net>

	* src/init.c (text_entry_activate): Apply fix from Peter Andersson
	to fix history scrollback behaviour (fixes #116324).

2005-04-01  Steve Murphy  <murf@e-tools.com>

	* configure.in: Added "rw" to ALL_LINGUAS.

2005-03-13  Robin Ericsson  <lobbin@localhost.nu>

	* src/net.c (make_connection): Removed unused variable conn_id.
	(read_from_connection): Changed string to const char* and to
	_not_ free it, it's declared static in mccpDecompress.c.

2005-03-11  Robin Ericsson  <lobbin@localhost.nu>

	* src/gnome-mud.h [connection_data]: Added member naws.
	Added a few prototypes.

	* src/init.c (create_connection_data): Set news to FALSE and connect
	signals so we can detect changes in displayed w/h.

	* src/telnet.c (write_octet): Removed.
	(write_escaped_octet): Added.