@@ -1,6 +1,11 @@
 2005-12-27  Jordi Mallach  <jordi@sindominio.net>
 
 	* src/Makefile.am (gnome_mud_SOURCES): Embarrasing typo.
+	(INCLUDES): define GLADEDIR as $(pkgdatadir), not the local
+	source ui/ directory.
+	* src/mud-preferences-window.c, src/mud-window-mconnect.c,
+	src/mud-window-mudedit.c, src/mud-window-mudlist.c,
+	src/mud-window.c: add slashes to all glade file references.
 
 2005-12-26  Les Harris  <lescom@comcast.net>
 	
